--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 		<div class="">
 					
-		<h1>Adults Born Between 1930 - 1956 Are Due Big Rebate!</h1>
+		<h1>Adults Born Between 1930 and 1956 Are Due Big Rebate!</h1>
            
 			
           <div class="single_iteam"><img src="./AP_files/114.jpg" width="526" height="275" alt="">
